# fazer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  buildspec.yml
.github/workflows/: build.yml
src/: lib.rs
