[package]
name = "fazer"
version = "0.1.0"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mp3-metadata = { git = "https://github.com/yotamofek/mp3-metadata" }
metaflac = { git = "https://github.com/yotamofek/rust-metaflac" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
id3 = "1.7.0"
lewton = "0.10.2"
ogg_metadata = "0.4.1"
mp4parse = "0.17"
hound = "3.5.0"

[dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]
