[package]
name = "fazer"
version = "0.0.2"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hound = "3.5.0"
id3 = "1.7.0"
lewton = "0.10.2"
metaflac = "0.2.5"
mp3-metadata = "0.3.4"
mp4parse = "0.17"
ogg_metadata = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.3.0"
serde-wasm-bindgen = "0.4"

[dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]

[profile.release]
lto = "fat"
opt-level = 's'
